--- a/client/src/app/popupModal/regenerate-password/regenerate-password.component.html
+++ b/client/src/app/popupModal/regenerate-password/regenerate-password.component.html
@@ -1,16 +1,40 @@
-<div *ngIf="submit==false">
+<div *ngIf="submit == false">
   <div class="modal-dialog" role="document" style="margin: 0">
-    <p style="white-space: nowrap">
-      Wprowadź email
-    </p>
+    <p style="white-space: nowrap">Wprowadź email</p>
     <div class="modal-content">
       <div class="modal-body">
         <div>
           <form [formGroup]="formGroup" (ngSubmit)="generateNewEmailPassword()">
-            <input formControlName="email" type="email" name="email" class="form-control" id="email" placeholder="email" required>
+            <input
+              formControlName="email"
+              type="email"
+              name="email"
+              class="form-control"
+              id="email"
+              placeholder="email"
+              required
+            />
             <div class="modal-footer">
-              <button (click)="closeModal()" type="button" id="add-employee-form" class="btn btn-secondary" data-dismiss="modal">Anuluj</button>
-              <button type="submit" class="btn btn-primary" style="background-color: gold; border-color: white; color: #041836;">Prześlij</button>
+              <button
+                (click)="closeModal()"
+                type="button"
+                id="add-employee-form"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+              >
+                Anuluj
+              </button>
+              <button
+                type="submit"
+                class="btn btn-primary"
+                style="
+                  background-color: gold;
+                  border-color: white;
+                  color: #041836;
+                "
+              >
+                Prześlij
+              </button>
             </div>
           </form>
         </div>
@@ -18,8 +42,6 @@
     </div>
   </div>
 </div>
-<div *ngIf="submit==true">
-  <p>
-    Na e-mailu znajduje się link z wygenerowaniem nowego hasła
-  </p>
+<div *ngIf="submit == true">
+  <p>Na e-mailu znajduje się link z wygenerowaniem nowego hasła</p>
 </div>
