--- a/client/src/app/welcomepage/welcomepage.component.html
+++ b/client/src/app/welcomepage/welcomepage.component.html
@@ -15,14 +15,20 @@
   </div>
   <div class="row-content">
     <div class="col-content">
-      <img src="../../assets/img/rsz_nm1.jpg" alt="">
+      <img src="../../assets/img/rsz_nm1.jpg" alt="" />
       <h4>Lorem ipsum.</h4>
-      <p href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium commodi debitis inventore magni sit voluptas.</p>
+      <p href="">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
+        commodi debitis inventore magni sit voluptas.
+      </p>
     </div>
     <div class="col-content">
-      <img src="../../assets/img/rsz_nm2.jpg" alt="">
+      <img src="../../assets/img/rsz_nm2.jpg" alt="" />
       <h4>Lorem ipsum.</h4>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium commodi debitis inventore magni sit voluptas.</p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
+        commodi debitis inventore magni sit voluptas.
+      </p>
     </div>
   </div>
 </section>
