--- a/client/src/app/aaapages/admin/nav/nav-admin/nav-admin.component.css
+++ b/client/src/app/aaapages/admin/nav/nav-admin/nav-admin.component.css
@@ -6,7 +6,7 @@
 }
 
 .scrolled {
-  background-color: #041836;;
+  background-color: #041836;
   transition: background-color 0.5s ease;
 }
 
@@ -36,7 +36,7 @@ ul {
   list-style: none;
 }
 
-.ctn{
+.ctn {
   padding: 8px 15px;
   background: gold;
   border-radius: 30px;
@@ -62,7 +62,9 @@ ul {
   display: none;
 }
 
-.bar1, .bar2, .bar3 {
+.bar1,
+.bar2,
+.bar3 {
   width: 35px;
   height: 5px;
   background-color: #333;
@@ -76,9 +78,8 @@ ul {
   cursor: pointer;
 }
 
-
 @media only screen and (max-width: 850px) {
-  .my-btn{
+  .my-btn {
     display: block;
   }
 
@@ -94,7 +95,7 @@ ul {
     left: 30px;
   }
 
-  .nav-links{
+  .nav-links {
     margin-top: -900px;
     flex-direction: column;
     width: 100%;
@@ -106,7 +107,7 @@ ul {
     transition: all 0.5s ease;
   }
 
-  .nav-links li{
+  .nav-links li {
     margin: 15px auto;
   }
 
