--- a/client/src/app/nav/nav-logged/nav-logged.component.html
+++ b/client/src/app/nav/nav-logged/nav-logged.component.html
@@ -1,19 +1,13 @@
 <nav class="navbar-content">
   <h1 routerLink="" class="logo">coctails-api</h1>
-  <ul class="nav-links" [ngClass]="{'mobile-menu': isOpen}">
+  <ul class="nav-links" [ngClass]="{ 'mobile-menu': isOpen }">
     <li *ngIf="auth.isAdmin()" routerLink="/admin" class="ctn-log">Panel</li>
     <li class="ctn-log">page2</li>
     <li class="ctn-log">page3</li>
     <li class="ctn-log">page4</li>
-    <li *ngIf="auth.isUser()">
-      USER EMAIL
-    </li>
-    <li *ngIf="auth.isAdmin()">
-      ADMIN EMAIL
-    </li>
-    <li class="ctn" (click)="logout()">
-      Wyloguj się
-    </li>
+    <li *ngIf="auth.isUser()">USER EMAIL</li>
+    <li *ngIf="auth.isAdmin()">ADMIN EMAIL</li>
+    <li class="ctn" (click)="logout()">Wyloguj się</li>
   </ul>
   <div class="my-btn" (click)="toggleMenu()">
     <div class="bar1"></div>
