--- a/client/src/app/nav/nav-unlogged/nav-unlogged.component.html
+++ b/client/src/app/nav/nav-unlogged/nav-unlogged.component.html
@@ -17,15 +17,17 @@
 <!--</nav>-->
 
 <nav class="navbar-content">
-  <h1 routerLink="" class="logo" >coctails-api</h1>
-  <ul class="nav-links" [ngClass]="{'mobile-menu': isOpen}">
+  <h1 routerLink="" class="logo">coctails-api</h1>
+  <ul class="nav-links" [ngClass]="{ 'mobile-menu': isOpen }">
     <li class="ctn-log">page2</li>
     <li class="ctn-log">page3</li>
     <li class="ctn-log">page4</li>
-    <li class="ctn-log"  (click)="onOpenModalLogin()">
-      Zaloguj się
-    </li>
-    <li class="ctn" style="background-color: gold; border-color: white;" (click)="onOpenModalRegister()">
+    <li class="ctn-log" (click)="onOpenModalLogin()">Zaloguj się</li>
+    <li
+      class="ctn"
+      style="background-color: gold; border-color: white"
+      (click)="onOpenModalRegister()"
+    >
       Rejestracja
     </li>
   </ul>
