--- a/client/src/app/popupModal/login-modal/login-modal.component.html
+++ b/client/src/app/popupModal/login-modal/login-modal.component.html
@@ -1,24 +1,52 @@
 <div class="modal-dialog" role="document" style="margin: 0">
-  <p>
-    Logowanie
-  </p>
+  <p>Logowanie</p>
   <div class="modal-content">
     <div class="modal-body">
       <form [formGroup]="formGroup" (ngSubmit)="login()">
         <div class="form-group">
           <label for="email">E-mail</label>
-          <input formControlName="email" type="text" name="email" class="form-control" id="email" placeholder="email" required>
+          <input
+            formControlName="email"
+            type="text"
+            name="email"
+            class="form-control"
+            id="email"
+            placeholder="email"
+            required
+          />
         </div>
         <div class="form-group">
           <label for="password">Hasło</label>
-          <input formControlName="password" type="password" name="password" class="form-control" id="password" placeholder="password" required>
+          <input
+            formControlName="password"
+            type="password"
+            name="password"
+            class="form-control"
+            id="password"
+            placeholder="password"
+            required
+          />
         </div>
         <div class="form-group">
           <a (click)="newPassword()" for="password">Nie pamiętasz hasła?</a>
         </div>
         <div class="modal-footer">
-          <button (click)="closeModal()" type="button" id="add-employee-form" class="btn btn-secondary" data-dismiss="modal">Anuluj</button>
-          <button type="submit" class="btn btn-primary" style="background-color: gold; border-color: white; color: #041836;">Zaloguj się</button>
+          <button
+            (click)="closeModal()"
+            type="button"
+            id="add-employee-form"
+            class="btn btn-secondary"
+            data-dismiss="modal"
+          >
+            Anuluj
+          </button>
+          <button
+            type="submit"
+            class="btn btn-primary"
+            style="background-color: gold; border-color: white; color: #041836"
+          >
+            Zaloguj się
+          </button>
         </div>
       </form>
     </div>
